--- a/WcgWebOne/src/main/resources/static/html/day02/01.demo.html
+++ b/WcgWebOne/src/main/resources/static/html/day02/01.demo.html
@@ -10,11 +10,21 @@
 		}
 	</style>-->
 	
-	<link rel="stylesheet" type="text/css" href="css/style.css"/>
-	
+	<link rel="stylesheet" type="text/css" href="../../css/style.css"/>
+	<style type="text/css">
+		p{
+			color: black;
+			font-size: 40px;
+		}
+	</style>
 </head>
 <body>
-	
+	<p>
+		p中文字
+		<span>
+			spance中文字
+		</span>
+	</p>
 	
 	<h1>这是一个非常漂亮的网页</h1>
 	
