--- a/WcgWebOne/src/main/resources/static/html/day01/字符转移.html
+++ b/WcgWebOne/src/main/resources/static/html/day01/字符转移.html
@@ -10,7 +10,8 @@
 				需要使用一些特殊的符号来表示这些特殊字符，这些特殊符号我们称为实体（转义字符串）
 				浏览器解析到实体时，会自动将实体转换为其对应的字符
 			实体的语法：
-				&实体的名字;
+				&
+				实体的名字;
 					<  &lt;
 					>  &gt;
 					空格  &nbsp;
