--- a/WcgWebOne/src/main/resources/static/html/day03/03.伪元素.html
+++ b/WcgWebOne/src/main/resources/static/html/day03/03.伪元素.html
@@ -4,6 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
+		<link rel="stylesheet" type="text/css" href="../../css/style.css"/>
 		<style type="text/css">
 			/*
 			 * 使用伪元素来表示元素中的一些特殊的位置
