--- a/WcgWebOne/src/main/resources/static/html/day03/04.属性选择器.html
+++ b/WcgWebOne/src/main/resources/static/html/day03/04.属性选择器.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
+		<link rel="stylesheet" type="text/css" href="../../css/style.css"/>
 		<style type="text/css">
 			
 			/*
@@ -40,7 +41,9 @@
 			/*p[title$="c"]{
 				background-color: yellow;
 			}*/
-			
+			/**
+			只要title中有c即可
+			 */
 			p[title*="c"]{
 				background-color: yellow;
 			}
