--- a/WcgWebOne/src/main/resources/static/html/day03/05.子元素选择器.html
+++ b/WcgWebOne/src/main/resources/static/html/day03/05.子元素选择器.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
+		<link rel="stylesheet" type="text/css" href="../../css/style.css"/>
 		<style type="text/css">
 			/*
 			 * 为第一个p标签设置一个背景颜色为黄色
