--- a/WcgWebOne/src/main/resources/static/html/day04/04.字体的样式.html
+++ b/WcgWebOne/src/main/resources/static/html/day04/04.字体的样式.html
@@ -37,7 +37,7 @@
 				 */
 				/*font-family: 华文彩云 , arial , 微软雅黑;*/
 				
-				font-family: "curlz mt";
+				font-family: "微软雅黑 Light";
 				
 			}
 			
