--- a/WcgWebOne/src/main/resources/static/html/day02/03.常用的选择器.html
+++ b/WcgWebOne/src/main/resources/static/html/day02/03.常用的选择器.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>常用选择器</title>
+		<link rel="stylesheet" type="text/css" href="../../css/style.css"/>
 		<style type="text/css">
 			
 			/*为页面中的所有的p元素，设置一个字体颜色为红色*/
