--- a/WcgWebOne/src/main/resources/static/html/mytest/testhtml.html
+++ b/WcgWebOne/src/main/resources/static/html/mytest/testhtml.html
@@ -14,9 +14,7 @@
         }
 
         .outer {
-            background: #6495ED;
             width: 300px;
-            height: 473px;
             margin: 50px auto;
         }
 
@@ -37,6 +35,45 @@
             color: #019e8b;
             font: 16px/36px 宋体;
         }
+        /*设置内容*/
+        .content{
+            border: 1px solid #deddd9;
+            padding: 0px 28px 0px 20px;
+        }
+
+        .content a{
+            color: black;
+            text-decoration: none;
+            font-size: 12px;
+        }
+
+        .content a:hover{
+            color: red;
+            text-decoration: underline;
+        }
+        .content h3{
+            margin-top: 16px;
+            margin-bottom: 16px;
+        }
+
+        .content .right{
+            float: right;
+        }
+
+        .content li{
+            margin-bottom: 15px;
+        }
+        .content ul{
+            list-style: none;
+            border-bottom: 1px dashed #deddd9;
+        }
+        .content .noborder{
+            border: none;
+        }
+        .content .red{
+            color: red;
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
@@ -45,7 +82,64 @@
         <a href="#">16年面授开班计划</a>
         <h3>近期开班</h3>
     </div>
-    <div class="content"></div>
+    <div class="content">
+        <h3><a href="#">javaEE+云计算—全程就业班</a> </h3>
+        <ul>
+            <li>
+                <a class="right" href="#"> <span class="red">预约报名</span> </a>
+                <a href="#">开班时间: <span class="red">2016-04-27</span> </a>
+            </li>
+            <li>
+                <a class="right" href="#"> <span class="red">无座，名额爆满</span> </a>
+                <a href="#">开班时间: <span class="red">2016-04-07</span> </a>
+            </li>
+            <li>
+                <a class="right" href="#"> <span >开办盛况</span> </a>
+                <a href="#">开班时间: <span >2016-03-15</span> </a>
+            </li>
+            <li>
+                <a class="right" href="#"> <span >开办盛况</span> </a>
+                <a href="#">开班时间: <span >2016-02-25</span> </a>
+            </li>
+            <li>
+                <a class="right" href="#"> <span >开办盛况</span> </a>
+                <a href="#">开班时间: <span >2015-12-26</span> </a>
+            </li>
+        </ul>
+        <h3><a href="#">Android+人工智能—全程就业班</a> </h3>
+        <ul>
+            <li>
+                <a class="right" href="#"> <span class="red">预约报名</span> </a>
+                <a href="#">开班时间: <span class="red">2016-04-10</span> </a>
+            </li>
+
+            <li>
+                <a class="right" href="#"> <span >开办盛况</span> </a>
+                <a href="#">开班时间: <span >2016-03-17</span> </a>
+            </li>
+            <li>
+                <a class="right" href="#"> <span >开办盛况</span> </a>
+                <a href="#">开班时间: <span >2016-02-20</span> </a>
+            </li>
+            <li>
+                <a class="right" href="#"> <span >开办盛况</span> </a>
+                <a href="#">开班时间: <span >2015-12-23</span> </a>
+            </li>
+        </ul>
+        <h3><a href="#">前端+HTML5—全程就业班</a> </h3>
+        <ul class="noborder">
+            <li>
+                <a class="right" href="#"> <span class="red">预约报名</span> </a>
+                <a href="#">开班时间: <span class="red">2016-05-10</span> </a>
+            </li>
+
+            <li>
+                <a class="right" href="#"> <span >开办盛况</span> </a>
+                <a href="#">开班时间: <span >2016-03-16</span> </a>
+            </li>
+
+        </ul>
+    </div>
 </div>
 </body>
 </html>
